finished css for blog page

--- a/blog.html
+++ b/blog.html
@@ -39,23 +39,22 @@
         <!-- Body wrapper starts-->
         <div class="blog__wrapper">
         <!-- Blog post starts -->
-            <section class="blog__post">
+            <section class="main__blog__post">
                 <!-- Blog post title -->
                 <h2 class="blog__title">Pineapple Chicken</h2>
-                <p class="blog__date">Posted at July 11, 2018 | by <a href="#" class="blog__link">Admin</a> | in <a href="#" class="blog__link">Recipes</a></p>
+                <p class="main__blog__date">Posted at July 11, 2018 | by <a href="#" class="blog__link">Admin</a> | in <a href="#" class="blog__link">Recipes</a></p>
                 <!-- Blog post body -->
                 <p class="blog__body">Morbi et accumsan est, non convallis metus. Etiam faucibus, leo et scelerisque facilisis, magna erat dictum nibh, vel congue tortor massa vitae magna. Magna erat dictum nibh, vel congue tortor massa vitae magna.</p>
                 <p class="blog__body">Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
                 <p class="blog__body">Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
                 <p class="blog__body">Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
-                <p class="blog__body">Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jicama salsify.</p>
+                <p class="blog__body blog__last">Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jicama salsify.</p>
                 
                 <hr />
                 <!-- Blog post footer -->
                 <div class="blog__tags">
                     <h5>Tags:</h5>
-                    <a href="">Recipes</a>, <a href="">Chicken</a>, <a href="#">Pineapple</a>, <a href="#">Mexican</a>
-                        
+                    <a href="" class="blog__tag">Recipes,</a> <a href="" class="blog__tag">Chicken,</a> <a href="#" class="blog__tag">Pineapple,</a> <a href="#" class="blog__tag">Mexican</a>
                 </div>
                 <div class="blog__links">
                     <h5>Share:</h5>
@@ -80,18 +79,18 @@
             <section class="related__posts">
                 <h5>Related Posts</h5>
                 <div class="related__posts__photos">
-                    <div class="related__post">
-                        <img src="./assets/blog/blog__3.jpeg" alt="" class="post__img" />
+                    <div class="related__post no__left__margin">
+                        <img src="./assets/blog/blog__3.jpeg" alt="A medium cake with pink frosting, and some white candles and a bright pink flower on a white ceramic stand." class="post__img" />
                         <h5 class="related__post__title">How to bake the perfect cake</h5>
                         <p class="blog__date">July 11, 2018 | by <a href="#" class="blog__link">Admin</a> | in <a href="#" class="blog__link">Recipes</a></p>
                     </div>
                     <div class="related__post">
-                        <img src="./assets/blog/blog__4.jpeg" alt="" class="post__img" />
+                        <img src="./assets/blog/blog__4.jpeg" alt="Three cupcakes in gold foil liners with green icing and a pink flower on top." class="post__img" />
                         <h5 class="related__post__title">Floral cupcakes</h5>
                         <p class="blog__date">July 19, 2018 | by <a href="#" class="blog__link">Admin</a> | in <a href="#" class="blog__link">Recipes</a></p>
                     </div>
                     <div class="related__post no__right__margin">
-                        <img src="./assets/blog/blog__5.jpeg" alt="" class="post__img" />
+                        <img src="./assets/blog/blog__5.jpeg" alt="A white china plate with smoked salmon, red onions, parsley, and chives layered presentably." class="post__img" />
                         <h5 class="related__post__title">Single post with image</h5>
                         <p class="blog__date">July 22, 2018 | by <a href="#" class="blog__link">Admin</a> | in <a href="#" class="blog__link">Recipes</a></p>
                     </div>
@@ -104,15 +103,19 @@
                 <h5>02 comments</h5>
                 <div class="user__comment">
                     <img src="./assets/blog/blog__6.jpeg" alt="" class="user__thumbnail" />
-                    <h6 class="user__name">Lucatony Avaro <span class="user__title">- Web Developer</span></h6>
-                    <p class="user__comment__text">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horeradish carrot squash brussels sprout chard.</p>
-                    <p class="comment__timestamp">Jul 17,2015 at 15 hours ago</p>
+                    <div class="comment__text">
+                        <h6 class="user__name">Lucatony Avaro <span class="user__title">- Web Developer</span></h6>
+                        <p class="user__comment__text">Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horeradish carrot squash brussels sprout chard.</p>
+                        <p class="comment__timestamp">Jul 17,2015 at 15 hours ago</p>
+                    </div>
                 </div>
                 <div class="user__comment">
                     <img src="./assets/blog/blog__7.jpeg" alt="" class="user__thumbnail" />
-                    <h6 class="user__name">Brian Hudson <span class="user__title">- Web Developer</span></h6>
-                    <p class="user__comment__text">Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jicama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea. Grape silver beet watercress potato tigernut corn groundnut.</p>
-                    <p class="comment__timestamp">Jul 17,2015 at 15 hours ago</p>
+                    <div class="comment__text">
+                        <h6 class="user__name">Brian Hudson <span class="user__title">- Web Developer</span></h6>
+                        <p class="user__comment__text">Pea horseradish azuki bean lettuce avocado asparagus okra. Kohlrabi radish okra azuki bean corn fava bean mustard tigernut jicama green bean celtuce collard greens avocado quandong fennel gumbo black-eyed pea. Grape silver beet watercress potato tigernut corn groundnut.</p>
+                        <p class="comment__timestamp">Jul 17,2015 at 15 hours ago</p>
+                    </div>
                 </div>
             </section>
             <!-- Blog post leave comment section starts -->
@@ -131,7 +134,7 @@
                         <input type="text" name="website" id="website" placeholder="Your Website">
 
                         <label for="comment"></label>
-                        <input type="textarea" name="comment" id="comment" placeholder="Comment">
+                        <textarea name="comment" id="comment" placeholder="Comment"></textarea>
 
                         <button type="submit">Submit comment</button>
 
