--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <!-- Restaurant section starts -->
         <section class="main__restaurants">
             <div class="restaurants__wrapper">
-                <img src="./assets/home/home_circle_text.png" alt="" class="restaurants__img__sticker" />
-                <img src="./assets/home/home__4.jpeg" alt="" class="restaurants__img" />
+                <img src="./assets/home/home_circle_text.png" alt="A text sticker that says 'A fancy food place yummm'" class="restaurants__img__sticker" />
+                <img src="./assets/home/home__4.jpeg" alt="A set up of tables with 4 chairs around each table, likely set up for a restaurant." class="restaurants__img" />
                 <h3>Our Restaurants</h3>
                 <hr />
                 <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthbut pea peanut soko zucchini.</p>
@@ -106,7 +106,7 @@
             <div class="reviews__wrapper">
                 <h3>Hungry Clients</h3>
                 <hr />
-                <p>Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion zucchini burdock yarrow chickpea dandelion.</p>
+                <p class="blockquote">Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion zucchini burdock yarrow chickpea dandelion.</p>
                 <a href="#"><i class="fas fa-chevron-left"></i></a>
                 <a href="#"><i class="fas fa-chevron-right"></i></a>
             </div>
