finished css for contact page

--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,44 @@
         </div>
     </header>
     <!-- Main starts -->
-    <main>
+    <main class="contact__main">
+        <div class="contact__wrapper">
+            <section class="contact__form">
+                <h2>Drop us a line</h2>
+                <div class="contact__form__body">
+                    <form class="contact__page__form">
+                        <label for="name"></label>
+                        <input type="text" name="name" id="name" placeholder="Your Name" required>
 
+                        <label for="email"></label>
+                        <input type="text" name="email" id="email" placeholder="Your Email" required>
+
+                        <label for="subject"></label>
+                        <input type="text" name="subject" id="subject" placeholder="Subject">
+
+                        <label for="message"></label>
+                        <textarea name="message" id="message" placeholder="Message"></textarea>
+
+                        <button type="submit">Send message &#10142;</button>
+                    </form>
+                </div>
+            </section>
+            <section class="contact__details">
+                <h2>Contact Details</h2>
+                <p class="company__summary">Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale.</p>
+
+                <h3>Working Hours</h3>
+                <p class="less__line__height"><span>Mon-Fri: </span>08:00am - 05:30pm</p>
+                <p class="less__line__height lighter__text italic__text">Not working on Saturday and Sunday!</p>
+
+                <h3>Contact Info</h3>
+                <p class="less__line__height lighter__text">A delicious restaurant</p>
+                <p class="less__line__height lighter__text">Toronto, Ontario</p>
+                <p class="more__line__height lighter__text">yum@food.com</p>
+                <p class="more__line__height lighter__text">+1 234 567 8910</p>
+            </section>
+        </div>
+        <img src="./assets/contact/contact__2.jpeg" alt="A white dragonfruit cut in half on a light blue plate." />
     </main>
 
     <!-- Footer starts -->
