--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
                     <li class="nav__link"><a href="./blog.html">Blog</a></li>
                     <li class="nav__link"><a href="#">Shop</a></li>
                     <li class="nav__link"><a href="./contact.html">Contact</a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-search"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag" title="View shopping bag"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-search" title="Search"></i></a></li>
                 </ul>
                 <button class="burger__menu">
                     <i class="fas fa-bars"></i>
@@ -72,7 +72,7 @@
                 <p class="more__line__height lighter__text">+1 234 567 8910</p>
             </section>
         </div>
-        <img src="./assets/contact/contact__2.jpeg" alt="A white dragonfruit cut in half on a light blue plate." />
+        <img src="./assets/contact/contact__2.jpeg" alt="A white dragonfruit cut in half on a light blue plate." class="contact__img"/>
     </main>
 
     <!-- Footer starts -->
