--- a/index.html
+++ b/index.html
@@ -26,91 +26,91 @@
                     <li class="nav__link"><a href="./blog.html">Blog</a></li>
                     <li class="nav__link"><a href="#">Shop</a></li>
                     <li class="nav__link"><a href="./contact.html">Contact</a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-search"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag" title="View shopping bag"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-search" title="Search"></i></a></li>
                 </ul>
             </div>
-            <button class="burger__menu">
+            <button class="burger__menu" title="Navigation">
                 <i class="fas fa-bars"></i>
             </button>
     </header>
     <!-- Main starts -->
     <main>
         <!-- Recipes section starts -->
-        <section class="main__recipes">
-            <div class="recipes__text">
-                <h3 class="main__h3 recipes__h3">Most Popular Recipes</h3>
-                <hr />
-                <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jicama salsify.</p>
-                <a href="#" class="main__a">View Recipes</a>
-            </div>
-            <img src="./assets/home/home__2.jpeg" alt="A head of purple green lettuce in a big bowl with lettuce leaves scattered around the bowl." class="main__img recipes__img"/>
-        </section>
-        <!-- Menu section starts -->
-        <section class="main__menu">
-            <img src="./assets/home/home__3.jpeg" alt="A meat taco being propped upright with two wedges of lime." class="main__img menu__img" />
-            <div class="menu__text">
-                <div class="menu__text__section">
-                    <i class="fas fa-lemon"></i>
-                    <h4>Vegetarian</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+            <section class="main__recipes">
+                <div class="recipes__text">
+                    <h3 class="main__h3 recipes__h3">Most Popular Recipes</h3>
+                    <hr />
+                    <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley jicama salsify.</p>
+                    <a href="#" class="main__a">View Recipes</a>
                 </div>
-                <div class="menu__text__section">
-                    <i class="fas fa-utensils"></i>
-                    <h4>Appetizers</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                <img src="./assets/home/home__2.jpeg" alt="A head of purple green lettuce in a big bowl with lettuce leaves scattered around the bowl." class="main__img recipes__img"/>
+            </section>
+            <!-- Menu section starts -->
+            <section class="main__menu">
+                <img src="./assets/home/home__3.jpeg" alt="A meat taco being propped upright with two wedges of lime." class="main__img menu__img" />
+                <div class="menu__text">
+                    <div class="menu__text__section section__left section__top">
+                        <i class="fas fa-lemon"></i>
+                        <h4>Vegetarian</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
+                    <div class="menu__text__section section__right section__top section__no__margin">
+                        <i class="fas fa-utensils"></i>
+                        <h4>Appetizers</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
+                    <div class="menu__text__section section__left">
+                        <i class="fas fa-coffee"></i>
+                        <h4>Desserts</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
+                    <div class="menu__text__section section__right">
+                        <i class="fas fa-glass-martini"></i>
+                        <h4>Drinks</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
+                    <div class="menu__text__section section__left section__bottom section__no__margin">
+                        <i class="fas fa-leaf"></i>
+                        <h4>Salads</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
+                    <div class="menu__text__section section__right section__bottom">
+                        <i class="fas fa-utensil-spoon"></i>
+                        <h4>Side Dishes</h4>
+                        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+                    </div>
                 </div>
-                <div class="menu__text__section">
-                    <i class="fas fa-coffee"></i>
-                    <h4>Desserts</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
+            </section>
+            <!-- Restaurant section starts -->
+            <section class="main__restaurants">
+                <div class="restaurants__wrapper">
+                    <img src="./assets/home/home_circle_text.png" alt="A text sticker that says 'A fancy food place yummm'" class="restaurants__img__sticker" />
+                    <img src="./assets/home/home__4.jpeg" alt="A set up of tables with 4 chairs around each table, likely set up for a restaurant." class="restaurants__img" />
+                    <h3>Our Restaurants</h3>
+                    <hr />
+                    <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthbut pea peanut soko zucchini.</p>
                 </div>
-                <div class="menu__text__section">
-                    <i class="fas fa-glass-martini"></i>
-                    <h4>Drinks</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
-                </div>
-                <div class="menu__text__section">
-                    <i class="fas fa-leaf"></i>
-                    <h4>Salads</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
-                </div>
-                <div class="menu__text__section">
-                    <i class="fas fa-utensil-spoon"></i>
-                    <h4>Side Dishes</h4>
-                    <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon.azuki bean.</p>
-                </div>
-            </div>
-        </section>
-        <!-- Restaurant section starts -->
-        <section class="main__restaurants">
-            <div class="restaurants__wrapper">
-                <img src="./assets/home/home_circle_text.png" alt="A text sticker that says 'A fancy food place yummm'" class="restaurants__img__sticker" />
-                <img src="./assets/home/home__4.jpeg" alt="A set up of tables with 4 chairs around each table, likely set up for a restaurant." class="restaurants__img" />
-                <h3>Our Restaurants</h3>
-                <hr />
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthbut pea peanut soko zucchini.</p>
-            </div>
 
-        </section>
-        <!-- Gallery section starts -->
-        <section class="main__gallery">
-            <img src="./assets/home/home__5.jpeg" alt="A mixed bowl of pureed greens garnished with nuts, tomatoes, and flowers in a white bowl." class="gallery__image" />
-            <img src="./assets/home/home__6.jpeg" alt="A small slider burger with chives sprinkled all around on a white plate." class="gallery__image" />
-            <img src="./assets/home/home__7.jpeg" alt="A pile of red onions." class="gallery__image" />
-            <img src="./assets/home/home__8.jpeg" alt="A small cake with pink frosting and some flower and leaves as decoration on top." class="gallery__image" />
-            <img src="./assets/home/home__9.jpeg" alt="Three bluberry cookies beside a small bowl of blueberries with two pink flowers on the side." class="gallery__image" />
-            <img src="./assets/home/home__10.jpeg" alt="A bowl of tzatziki in a white ceramic bowl on a white serving tray." class="gallery__image" />
-        </section>
-        <section class="main__reviews">
-            <div class="reviews__wrapper">
-                <h3>Hungry Clients</h3>
-                <hr />
-                <p class="blockquote">Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion zucchini burdock yarrow chickpea dandelion.</p>
-                <a href="#"><i class="fas fa-chevron-left"></i></a>
-                <a href="#"><i class="fas fa-chevron-right"></i></a>
-            </div>
-        </section>
+            </section>
+            <!-- Gallery section starts -->
+            <section class="main__gallery">
+                <img src="./assets/home/home__5.jpeg" alt="A mixed bowl of pureed greens garnished with nuts, tomatoes, and flowers in a white bowl." class="gallery__image" />
+                <img src="./assets/home/home__6.jpeg" alt="A small slider burger with chives sprinkled all around on a white plate." class="gallery__image" />
+                <img src="./assets/home/home__7.jpeg" alt="A pile of red onions." class="gallery__image" />
+                <img src="./assets/home/home__8.jpeg" alt="A small cake with pink frosting and some flower and leaves as decoration on top." class="gallery__image" />
+                <img src="./assets/home/home__9.jpeg" alt="Three bluberry cookies beside a small bowl of blueberries with two pink flowers on the side." class="gallery__image" />
+                <img src="./assets/home/home__10.jpeg" alt="A bowl of tzatziki in a white ceramic bowl on a white serving tray." class="gallery__image" />
+            </section>
+            <section class="main__reviews">
+                <div class="reviews__wrapper">
+                    <h3>Hungry Clients</h3>
+                    <hr />
+                    <p class="blockquote">Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion zucchini burdock yarrow chickpea dandelion.</p>
+                    <a href="#"><i class="fas fa-chevron-left"></i></a>
+                    <a href="#"><i class="fas fa-chevron-right"></i></a>
+                </div>
+            </section>
     </main>
 
     <!-- Footer starts -->
