--- a/blog.html
+++ b/blog.html
@@ -26,8 +26,8 @@
                     <li class="nav__link"><a href="./blog.html">Blog</a></li>
                     <li class="nav__link"><a href="#">Shop</a></li>
                     <li class="nav__link"><a href="./contact.html">Contact</a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
-                    <li class="nav__link"><a href="#"><i class="fas fa-search"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-shopping-bag" title="View shopping bag"></i></a></li>
+                    <li class="nav__link"><a href="#"><i class="fas fa-search" title="Search"></i></a></li>
                 </ul>
                 <button class="burger__menu">
                     <i class="fas fa-bars"></i>
