added js for hamburger menu :hamburger:

--- a/blog.html
+++ b/blog.html
@@ -189,5 +189,6 @@
             <p>Copyright &copy; 2015 by <span class="polar">Polar</span> All Rights Reserved </p>
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
