--- a/contact.html
+++ b/contact.html
@@ -128,5 +128,6 @@
             <p>Copyright &copy; 2015 by <span class="polar">Polar</span> All Rights Reserved </p>
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
