--- a/index.html
+++ b/index.html
@@ -166,5 +166,7 @@
             <p>Copyright &copy; 2015 by <span class="polar">Polar</span> All Rights Reserved </p>
         </div>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
